force-app/main/default/objects/Employee_Status__c/Employee_Status__c.object-meta.xml
<CustomObject>
    <label>Employee Status</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Employee Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>