force-app/main/default/objects/Employee_Status__c/fields/Certification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Certification_Comments__c</fullName>
    <label>Certification Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>