force-app/main/default/objects/Employee_Status__c/fields/Certification_Status__c.field-meta.xml
<CustomField>
    <fullName>Certification_Status__c</fullName>
    <inlineHelpText>Green = acorde al role o superior, Yellow = preparando, Red= no interesado</inlineHelpText>
    <label>Certification Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>