force-app/main/default/objects/Employee_Status__c/fields/Red_Reason__c.field-meta.xml
<CustomField>
    <fullName>Red_Reason__c</fullName>
    <inlineHelpText>Red Reasons: Salario, Role por el que cobra, Technology, otro</inlineHelpText>
    <label>Red Reason</label>
    <type>TextArea</type>
</CustomField>